# Safe-Autonomous-Navigation-in-Dynamic-Environments

./: LICENSE  README.md
erl_clf_cbf_controller/: CMakeLists.txt  package.xml
erl_clf_cbf_controller/launch/: clf_cbf_mov_obs_2.launch
erl_clf_cbf_controller/msg/: ClfCbfRequest.msg  ClfCbfResult.msg
erl_clf_cbf_controller/rviz/: test_cone_controller_p3d.rviz  test_cone_controller_p3d_sdf.rviz
erl_clf_cbf_controller/src/erl_clf_cbf_controller/: clf_cbf_controller.py  clf_cbf_controller_node.py  controller_config.json  cvxpy_solver_node.py  post_process.py  pre_process.py
ldlidar_stl_ros/: README.md
ldlidar_stl_ros/src/publish_node/: main.cpp
lenna_astar/: CMakeLists.txt  package.xml
lenna_astar/include/lenna_astar/: a_star.h
lenna_astar/launch/: lenna_online_astar.launch
lenna_astar/src/: a_star.cpp  map_inflator_node.cpp  online_astar_node.cpp
lenna_bringup/: CMakeLists.txt  README.md  package.xml
lenna_bringup/config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  mapper_params_online_async.yaml  planner_config.yaml  teb_local_planner_params.yaml
lenna_bringup/launch/: lenna_bringup.launch  lenna_navigation_stack.launch  lenna_slam_hector.launch  lenna_slam_plan.launch  lenna_slam_toolbox.launch  lenna_teleop_keyboard.launch
lenna_bringup/map/: lab_empty_pist.pgm  lab_empty_pist.yaml  map_cropped.pgm  map_cropped.yaml  map_ee_full_cropped.yaml
lenna_bringup/rviz/: lenna_bringup.rviz  lenna_slam_plann.rviz
lenna_bringup/scripts/: field_ops.py  lenna_mobile_robot.py  odom_tf_broadcast.py  packet_handler.py  serial_cmd_node.py  serial_handler.py  serial_handshake_node.py  serial_odom_node.py
ref_gvn_lite/src/ref_gvn_lite/: core_lite.py  post_process.py  pre_process.py  ref_gvn_lite_node.py  ros_gvn_marker_utils.py  ros_marker_utils.py
